@@ -1,6 +1,7 @@
 ver 0.17.4 (2013/??/??)
 * protocol:
   - allow to omit END in ranges (START:END)
+  - don't emit IDLE_PLAYER before audio format is known
 * decoder:
   - ffmpeg: support float planar audio (ffmpeg 1.1)
   - ffmpeg: fix AVFrame allocation
